Added SERVER_SECRET to .env

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-DATABASE_TYPE=sqlite
-DATABASE_URL=file:taskcafe.db
+DATABASE_TYPE=postgres
+DATABASE_HOST=db
+DATABASE_PORT=5432
+DATABASE_USER=taskcafe
+DATABASE_PASSWORD=taskcafe
+DATABASE_DBNAME=taskcafe
+
+SERVER_SECRET=some-random-secret-key
