Atualizar variáveis de ambiente no arquivo .env

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,19 @@
-REACT_APP_ENABLE_POLLING=true
-ESLINT_NO_DEV_ERRORS=true
+APP_PORT=3333
+APP_ENV=production
+APP_URL=https://<your-project-name>.up.railway.app
+
+DB_TYPE=postgres
+DB_HOST=viaduto.proxy.rlwy.net
+DB_PORT=44770
+DB_USER=postgres
+DB_PASSWORD=gyXXXuSTamMtZiXKKSocmPrbYHDzQuIBP
+DB_NAME=estrada de ferro
+
+REDIS_HOST=roundhouse.proxy.rlwy.net
+REDIS_PORT=40093
+REDIS_PASSWORD=vzKDuPOkfTrSmZKIQTEBwQTAzxwwLL
+
+JWT_SECRET=myverysecretkey
+SERVER_SECRET=myverysecretkey
+
+REACT_APP_API_URL=https://<your-project-name>.up.railway.app
