--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 APP_PORT=3333
 APP_ENV=production
-APP_URL=https://<your-project-name>.up.railway.app
+APP_URL=https://gin-produção-8c66.up.railway.app
 
 DB_TYPE=postgres
 DB_HOST=viaduto.proxy.rlwy.net
@@ -16,4 +16,4 @@ REDIS_PASSWORD=vzKDuPOkfTrSmZKIQTEBwQTAzxwwLL
 JWT_SECRET=myverysecretkey
 SERVER_SECRET=myverysecretkey
 
-REACT_APP_API_URL=https://<your-project-name>.up.railway.app
+REACT_APP_API_URL=https://gin-produção-8c66.up.railway.app
